# CubbyConnect

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  bors.toml  codecov.yml
.github/workflows/: audit.yml  build.yml  clippy.yml  coverage.yml  fmt.yml  server-audit.yml  server-build.yml  server-clippy.yml  server-coverage.yml  server-fmt.yml  server-test.yml  test.yml
client/: README.md
client/Includes/: Server.hpp
client/Sources/: Server.cpp
client/Tests/: SimpleTest.cpp
protobuf/: sample.proto
server/: Cargo.toml  README.md  build.rs
server/server-core/: Cargo.toml  build.rs
server/server-core/src/: config.rs  fn_handler.rs  fn_layer.rs  handler.rs  layer.rs  lib.rs
server/server-macro/: Cargo.toml
server/server-macro/src/: lib.rs
server/server-macro/tests/: fn_layer_test.rs  layer_test.rs
server/src/: config.rs  fn_handler.rs  fn_layer.rs  fn_pipe.rs  handler.rs  layer.rs  lib.rs  pipe.rs  server.rs
