[package]
name = "cubby-connect-server"
version = "0.1.0"
authors = [
    "Chris Ohk <utilforever@gmail.com>",
    "Seungoh Han <so.h4ns@gmail.com>",
    "Jaeyong Sung <jaeyong0201@gmail.com>",
    "Seungbin Oh <sboh1214@gmail.com>",
    "Minchurl Shin <minchurl001@gmail.com>"
]
description = "Voxel-based MMORPG server using Rust"
repository = "https://github.com/CubbyTeam/CubbyConnect"
readme = "README.md"
keywords = ["game", "mmorpg", "server"]
license = "GPL-3.0"
edition = "2021"
include = [
    "src/**.*",
    "Cargo.toml",
    "README.md",
]

[dependencies]
cubby-connect-server-core = { path = "./server-core" }

