[package]
name = "cubby-connect-server-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.10.2"
futures = "0.3.17"
prost = "0.8"
serde = { version = "1.0", features = ["derive"], optional = true }
tokio = { version = "1.10.1", features = ["rt-multi-thread", "macros"] }

[features]
default = []
serial = ["serde"]

[build-dependencies]
prost-build = "0.8"

[dev-dependencies]
num-traits = "0.2.14"
