[package]
name = "cubby-connect-server-macro"
version = "0.1.0"
authors = [
    "Chris Ohk <utilforever@gmail.com>",
    "Seungoh Han <so.h4ns@gmail.com>",
    "Jaeyong Sung <jaeyong0201@gmail.com>",
    "Seungbin Oh <sboh1214@gmail.com>",
    "Minchurl Shin <minchurl001@gmail.com>"
]
description = "Voxel-based MMORPG server using Rust (macro part)"
repository = "https://github.com/CubbyTeam/CubbyConnect"
license = "MIT"
edition = "2021"
include = [
    "src/**.*",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[dev-dependencies]
cubby-connect-server-core = { path = "../server-core" }
tokio = { version = "1.10.1", features = ["rt-multi-thread", "macros"] }
num-traits = "0.2.14"
futures = "0.3.17"
